# todo

./: CMakeLists.txt  README.md  coverage.info  index-sort-f.html  index-sort-l.html  index.html
.github/workflows/: rust.yml
lib/: CMakeLists.txt  debug_i.h  index-sort-f.html  index-sort-l.html  index.html  task.c  task.c.func-sort-c.html  task.c.func.html  task.c.gcov.html  task.h  todo.c  todo.c.func-sort-c.html  todo.c.func.html  todo.c.gcov.html  todo.h  todotxt.c  todotxt.c.func-sort-c.html  todotxt.c.func.html  todotxt.c.gcov.html  todotxt.h
samples/: CMakeLists.txt  sample.c
src/: CMakeLists.txt  debug_i.h  hello.c.func-sort-c.html  hello.c.func.html  hello.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  lib.rs  main.rs  task.c  task.c.func-sort-c.html  task.c.func.html  task.c.gcov.html  task.h  task.rs  todo.c  todo.c.func-sort-c.html  todo.c.func.html  todo.c.gcov.html  todo.h  todo.rs  todotxt.c  todotxt.c.func-sort-c.html  todotxt.c.func.html  todotxt.c.gcov.html  todotxt.h  todotxt.rs  todotxt_i.h
tests/: CMakeLists.txt  instrument.c  test_task.c  test_todo.c  test_todotxt.c
tests/lib/: CMakeLists.txt  instrument.c  test_task.c  test_todo.c  test_todotxt.c
